/***********************************************************************
X3 ChangeLog

2010-09-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for maxsetinfo now allowing you to set it
	to the maximum value as specified in x3.conf

2010-09-24  Matthew Beeching  <jobe@mdbnet.co.uk>

        * src/proto-p10.c: Fix for crash bug during burst where X3 sends
        a B (BURST) message with a channel limit in the modes string.

2010-09-24  Alex Schumann <rubin@afternet.org>

	* src/chanserv.c: dont let users set extended bans with
	.ban/lamer/etc, and dont remove extended bans with bantimeout

2010-09-19  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Added ignore_csuspend to *ChanServ.csuspend
	and *ChanServ.cunsuspend as a default flag.

2010-09-17  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Updated ChanServ.staff, ChanServ.ircops and
	ChanServ.helpers to hide users with user mode +H (hide oper).

2010-09-08  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Replaced some horrible code for formatting a
	channel mode string and fix for a bug where chan mode +A was
	being ignored.

2010-08-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Changed wheel of misfortune nick change pseudo
	user to use a hard coded host name to prevent accidentally giving
	out a users real host.

2010-08-19  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Changed TOK_PRIVS to "PR" to match current ircu
	distributions.

2010-07-31  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-common.c: Added hg revision information to VERSION
	reply to match version strings everywhere else.

2010-07-30  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/Makefile.in: Added version.c generation at compile time

	* src/modcmd.c: Updated to use cvs_version from version.c

	* src/version.c.SH: Added version.c.SH to generate version.c

	* src/version.h: Added version.h

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>
